--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="SOM_01_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\SOM-01-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SimplifiedCells_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SimplifiedCells-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
