--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -184,4 +184,7 @@
   <data name="SOM_01_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\SOM-01-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MeanShortestPath_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\MeanShortestPath-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
