--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -196,4 +196,7 @@
   <data name="PlanBee_Component_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\PlanBee Component-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BetweenPaths_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\BetweenPaths-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
