--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -199,4 +199,10 @@
   <data name="BetweenPaths_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\BetweenPaths-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ExitPaths_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\ExitPaths-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ExitPaths_Frequency_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\ExitPaths_Frequency-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
