--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,18 +127,6 @@
   <data name="Attractions_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Attractions-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="BowerBird" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Icons\BowerBird.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="BowerBird100" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Icons\BowerBird100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="BowerBird100_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Icons\BowerBird100-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="BowerBird200_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Icons\BowerBird200-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="BowerBird20png_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\BowerBird20png-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -181,9 +169,6 @@
   <data name="SOM_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\SOM-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SOM_01_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Icons\SOM-01-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="MeanShortestPath_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\MeanShortestPath-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -204,5 +189,8 @@
   </data>
   <data name="ExitPaths_Frequency_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\ExitPaths_Frequency-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CovidComp_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\CovidComp-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
