--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -193,4 +193,7 @@
   <data name="CovidComp_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\CovidComp-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ClusteringCoeff_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ClusteringCoeff-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
